<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="10dp"
    android:background="@drawable/corner_bgc">

    <TextView
        android:id="@+id/new_doc_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/new_document"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="10dp"
        android:background="#7b7b7b"
        app:layout_constraintTop_toBottomOf="@id/new_doc_tw"
        tools:layout_editor_absoluteX="4dp" />

    <EditText
        android:id="@+id/new_doc_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/name_doc"
        android:inputType="text"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:textSize="@dimen/dialog_text_size"/>

    <EditText
        android:id="@+id/new_doc_descr_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="4dp"
        android:hint="@string/desciption_doc"
        android:inputType="textMultiLine"
        android:lines="4"
        android:textSize="@dimen/dialog_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_doc_name_et" />

    <Button
        android:id="@+id/ok_button_new_doc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="OK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_doc_descr_et" />
</androidx.constraintlayout.widget.ConstraintLayout>