<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="10dp"
    android:background="@drawable/corner_bgc">

    <TextView
        android:id="@+id/new_string_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/new_string"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#7b7b7b"
        app:layout_constraintTop_toBottomOf="@id/new_string_title_tv"
        tools:layout_editor_absoluteX="4dp" />


    <LinearLayout
        android:id="@+id/new_string_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:id="@+id/new_string_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:gravity="center_vertical"
            android:paddingHorizontal="5dp"
            android:textSize="@dimen/dialog_text_size"
            tools:text="1234567890" />

        <EditText
            android:id="@+id/new_string_goods_count_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:hint="@string/count"
            android:inputType="number"
            android:paddingHorizontal="5dp"
            android:textSize="@dimen/dialog_text_size" />
    </LinearLayout>


    <TextView
        android:id="@+id/new_string_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="5dp"
        android:layout_marginHorizontal="20dp"
        android:text=""
        android:textSize="@dimen/dialog_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_string_ll" />

    <CheckBox
        android:id="@+id/checkbox_output_dialog_new_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/checkbox_output_dialog"
        android:textSize="@dimen/checkbox_text_size"
        android:lines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_string_name_tv" />

    <Button
        android:id="@+id/ok_button_new_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toEndOf="@+id/checkbox_output_dialog_new_string"
        app:layout_constraintTop_toBottomOf="@+id/new_string_name_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>